// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NamedDefinition 1`] = `
Object {
  "identifier": Object {
    "_meta": Object {
      "end": Object {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "NamedDefinition",
  "typeTag": Object {
    "identifier": Object {
      "kind": "TypeIdentifier",
      "value": "number",
    },
    "kind": "TypeTag",
  },
}
`;

exports[`NamedLiteral 1`] = `
Object {
  "expression": Object {
    "kind": "NumberLiteral",
    "value": 5,
  },
  "identifier": Object {
    "_meta": Object {
      "end": Object {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "NamedLiteral",
}
`;

exports[`NamedRecordDefinition 1`] = `
Object {
  "kind": "NamedRecordDefinitionStatement",
  "namedRecordDefinition": Object {
    "identifier": Object {
      "kind": "TypeIdentifier",
      "value": "Point",
    },
    "kind": "NamedRecordDefinition",
    "record": Object {
      "definitions": Array [
        Object {
          "identifier": Object {
            "_meta": Object {
              "end": Object {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
              "start": Object {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
            },
            "kind": "ValueIdentifier",
            "value": "x",
          },
          "kind": "NamedDefinition",
          "typeTag": Object {
            "identifier": Object {
              "kind": "TypeIdentifier",
              "value": "number",
            },
            "kind": "TypeTag",
          },
        },
        Object {
          "identifier": Object {
            "_meta": Object {
              "end": Object {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
              "start": Object {
                "column": 24,
                "line": 1,
                "offset": 23,
              },
            },
            "kind": "ValueIdentifier",
            "value": "y",
          },
          "kind": "NamedDefinition",
          "typeTag": Object {
            "identifier": Object {
              "kind": "TypeIdentifier",
              "value": "number",
            },
            "kind": "TypeTag",
          },
        },
      ],
      "kind": "RecordDefinition",
    },
  },
}
`;

exports[`NamedRecordDefinition.empty 1`] = `
Object {
  "kind": "NamedRecordDefinitionStatement",
  "namedRecordDefinition": Object {
    "identifier": Object {
      "kind": "TypeIdentifier",
      "value": "True",
    },
    "kind": "NamedRecordDefinition",
    "record": Object {
      "definitions": Array [],
      "kind": "RecordDefinition",
    },
  },
}
`;

exports[`NamedRecordDefinitionGroup 1`] = `
Object {
  "identifier": Object {
    "kind": "TypeIdentifier",
    "value": "Card",
  },
  "kind": "NamedRecordDefinitionGroup",
  "namedRecordDefinitions": Array [
    Object {
      "identifier": Object {
        "kind": "TypeIdentifier",
        "value": "King",
      },
      "kind": "NamedRecordDefinition",
      "record": Object {
        "definitions": Array [],
        "kind": "RecordDefinition",
      },
    },
    Object {
      "identifier": Object {
        "kind": "TypeIdentifier",
        "value": "Queen",
      },
      "kind": "NamedRecordDefinition",
      "record": Object {
        "definitions": Array [],
        "kind": "RecordDefinition",
      },
    },
    Object {
      "identifier": Object {
        "kind": "TypeIdentifier",
        "value": "Jack",
      },
      "kind": "NamedRecordDefinition",
      "record": Object {
        "definitions": Array [],
        "kind": "RecordDefinition",
      },
    },
    Object {
      "identifier": Object {
        "kind": "TypeIdentifier",
        "value": "Number",
      },
      "kind": "NamedRecordDefinition",
      "record": Object {
        "definitions": Array [
          Object {
            "identifier": Object {
              "_meta": Object {
                "end": Object {
                  "column": 19,
                  "line": 5,
                  "offset": 76,
                },
                "start": Object {
                  "column": 14,
                  "line": 5,
                  "offset": 71,
                },
              },
              "kind": "ValueIdentifier",
              "value": "value",
            },
            "kind": "NamedDefinition",
            "typeTag": Object {
              "identifier": Object {
                "kind": "TypeIdentifier",
                "value": "number",
              },
              "kind": "TypeTag",
            },
          },
        ],
        "kind": "RecordDefinition",
      },
    },
  ],
}
`;

exports[`NamedRecordLiteral 1`] = `
Object {
  "identifier": Object {
    "kind": "TypeIdentifier",
    "value": "Point",
  },
  "kind": "NamedRecordLiteral",
  "recordLiteral": Object {
    "definitions": Array [
      Object {
        "expression": Object {
          "kind": "NumberLiteral",
          "value": 5,
        },
        "identifier": Object {
          "_meta": Object {
            "end": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": Object {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "kind": "ValueIdentifier",
          "value": "x",
        },
        "kind": "NamedLiteral",
      },
      Object {
        "expression": Object {
          "kind": "NumberLiteral",
          "value": 3,
        },
        "identifier": Object {
          "_meta": Object {
            "end": Object {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": Object {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "kind": "ValueIdentifier",
          "value": "y",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
}
`;

exports[`NamedRecordLiteral.nestedIdentifier 1`] = `
Object {
  "identifier": Object {
    "kind": "NestedTypeIdentifier",
    "path": Array [
      Object {
        "kind": "TypeIdentifier",
        "value": "Card",
      },
      Object {
        "kind": "TypeIdentifier",
        "value": "King",
      },
    ],
  },
  "kind": "NamedRecordLiteral",
  "recordLiteral": Object {
    "definitions": Array [
      Object {
        "expression": Object {
          "kind": "NumberLiteral",
          "value": 5,
        },
        "identifier": Object {
          "_meta": Object {
            "end": Object {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": Object {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
          },
          "kind": "ValueIdentifier",
          "value": "x",
        },
        "kind": "NamedLiteral",
      },
      Object {
        "expression": Object {
          "kind": "NumberLiteral",
          "value": 3,
        },
        "identifier": Object {
          "_meta": Object {
            "end": Object {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "start": Object {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
          },
          "kind": "ValueIdentifier",
          "value": "y",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
}
`;

exports[`NestedTypeIdentifier 1`] = `
Object {
  "kind": "NestedTypeIdentifier",
  "path": Array [
    Object {
      "kind": "TypeIdentifier",
      "value": "Card",
    },
    Object {
      "kind": "TypeIdentifier",
      "value": "King",
    },
  ],
}
`;

exports[`RecordDefinition 1`] = `
Object {
  "definitions": Array [
    Object {
      "identifier": Object {
        "_meta": Object {
          "end": Object {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": Object {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "kind": "ValueIdentifier",
        "value": "x",
      },
      "kind": "NamedDefinition",
      "typeTag": Object {
        "identifier": Object {
          "kind": "TypeIdentifier",
          "value": "number",
        },
        "kind": "TypeTag",
      },
    },
    Object {
      "identifier": Object {
        "_meta": Object {
          "end": Object {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": Object {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "kind": "ValueIdentifier",
        "value": "y",
      },
      "kind": "NamedDefinition",
      "typeTag": Object {
        "identifier": Object {
          "kind": "TypeIdentifier",
          "value": "number",
        },
        "kind": "TypeTag",
      },
    },
  ],
  "kind": "RecordDefinition",
}
`;

exports[`RecordLiteral 1`] = `
Object {
  "definitions": Array [
    Object {
      "expression": Object {
        "kind": "NumberLiteral",
        "value": 5,
      },
      "identifier": Object {
        "_meta": Object {
          "end": Object {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": Object {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "kind": "ValueIdentifier",
        "value": "x",
      },
      "kind": "NamedLiteral",
    },
    Object {
      "expression": Object {
        "kind": "NumberLiteral",
        "value": 3,
      },
      "identifier": Object {
        "_meta": Object {
          "end": Object {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": Object {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
        },
        "kind": "ValueIdentifier",
        "value": "y",
      },
      "kind": "NamedLiteral",
    },
  ],
  "kind": "RecordLiteral",
}
`;

exports[`RecordLiteral.long 1`] = `
Object {
  "definitions": Array [
    Object {
      "expression": Object {
        "kind": "NumberLiteral",
        "value": 3,
      },
      "identifier": Object {
        "_meta": Object {
          "end": Object {
            "column": 8,
            "line": 2,
            "offset": 9,
          },
          "start": Object {
            "column": 5,
            "line": 2,
            "offset": 6,
          },
        },
        "kind": "ValueIdentifier",
        "value": "num",
      },
      "kind": "NamedLiteral",
    },
    Object {
      "expression": Object {
        "definitions": Array [
          Object {
            "expression": Object {
              "kind": "NumberLiteral",
              "value": 2,
            },
            "identifier": Object {
              "_meta": Object {
                "end": Object {
                  "column": 10,
                  "line": 4,
                  "offset": 34,
                },
                "start": Object {
                  "column": 7,
                  "line": 4,
                  "offset": 31,
                },
              },
              "kind": "ValueIdentifier",
              "value": "num",
            },
            "kind": "NamedLiteral",
          },
          Object {
            "expression": Object {
              "kind": "StringLiteral",
              "value": "this",
            },
            "identifier": Object {
              "_meta": Object {
                "end": Object {
                  "column": 10,
                  "line": 5,
                  "offset": 48,
                },
                "start": Object {
                  "column": 7,
                  "line": 5,
                  "offset": 45,
                },
              },
              "kind": "ValueIdentifier",
              "value": "str",
            },
            "kind": "NamedLiteral",
          },
          Object {
            "expression": Object {
              "kind": "BooleanLiteral",
              "value": true,
            },
            "identifier": Object {
              "_meta": Object {
                "end": Object {
                  "column": 11,
                  "line": 6,
                  "offset": 68,
                },
                "start": Object {
                  "column": 7,
                  "line": 6,
                  "offset": 64,
                },
              },
              "kind": "ValueIdentifier",
              "value": "bool",
            },
            "kind": "NamedLiteral",
          },
          Object {
            "expression": Object {
              "definitions": Array [
                Object {
                  "expression": Object {
                    "kind": "NumberLiteral",
                    "value": 3,
                  },
                  "identifier": Object {
                    "_meta": Object {
                      "end": Object {
                        "column": 14,
                        "line": 7,
                        "offset": 89,
                      },
                      "start": Object {
                        "column": 13,
                        "line": 7,
                        "offset": 88,
                      },
                    },
                    "kind": "ValueIdentifier",
                    "value": "x",
                  },
                  "kind": "NamedLiteral",
                },
                Object {
                  "expression": Object {
                    "kind": "NumberLiteral",
                    "value": 3,
                  },
                  "identifier": Object {
                    "_meta": Object {
                      "end": Object {
                        "column": 20,
                        "line": 7,
                        "offset": 95,
                      },
                      "start": Object {
                        "column": 19,
                        "line": 7,
                        "offset": 94,
                      },
                    },
                    "kind": "ValueIdentifier",
                    "value": "y",
                  },
                  "kind": "NamedLiteral",
                },
              ],
              "kind": "RecordLiteral",
            },
            "identifier": Object {
              "_meta": Object {
                "end": Object {
                  "column": 10,
                  "line": 7,
                  "offset": 85,
                },
                "start": Object {
                  "column": 7,
                  "line": 7,
                  "offset": 82,
                },
              },
              "kind": "ValueIdentifier",
              "value": "rec",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "RecordLiteral",
      },
      "identifier": Object {
        "_meta": Object {
          "end": Object {
            "column": 8,
            "line": 3,
            "offset": 21,
          },
          "start": Object {
            "column": 5,
            "line": 3,
            "offset": 18,
          },
        },
        "kind": "ValueIdentifier",
        "value": "rec",
      },
      "kind": "NamedLiteral",
    },
  ],
  "kind": "RecordLiteral",
}
`;
